fix: cmp-addon query text too long bug (#739)

--- a/shell/app/modules/cmp/pages/middleware-dashboard/index.scss
+++ b/shell/app/modules/cmp/pages/middleware-dashboard/index.scss
@@ -28,6 +28,7 @@
 
   .filter-item-content {
     flex: 1;
+    width: 0;
 
     .ant-select-selection {
       max-height: 120px;
